update: 소셜 로그인 jwt 토큰 추가
