# user-service/lib/swagger/docs/User Service.yml
@@ -112,6 +112,17 @@ paths:
       responses:
         "200":
           description: "토큰 레코드를 생성했고, 전달 받은 파라미터로 소셜 프로필을 만들었습니다."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  digicu_token:
+                    type: string
+                    description: 디지쿠 애플리케이션 토큰
+                  expires_in:
+                    type: string
+                    description: 디지쿠 토큰 만료 시간
         "400":
           description: "파라미터가 잘못 되었습니다."
         "500":
@@ -161,6 +172,17 @@ paths:
       responses:
         "200":
           description: "토큰을 갱신했고, 전달 받은 파라미터로 유저를 업데이트 했습니다."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  digicu_token:
+                    type: string
+                    description: 디지쿠 애플리케이션 토큰
+                  expires_in:
+                    type: string
+                    description: 디지쿠 토큰 만료 시간
         "400":
           description: "파라미터가 잘못 되었습니다."
         "500":
